<resources>
    <string name="app_name">Auto Shutter</string>
    <string name="alt_settings">Go to Settings</string>
    <string name="alt_instruction">Phone shaking</string>
    <string name="alt_swap">Switch between front and back camera</string>
    <string name="alt_pause">Pause auto capture</string>
    <string name="alt_play">Resume auto capture</string>
    <string name="pause_txt">Paused</string>
    <string name="hold_still_txt">Hold still to capture photo</string>
    <string name="capture_txt">Photo captured</string>
    <string name="lapse_count_txt">&#160; photos captured &#40;</string>
    <string name="lapse_count_txt2">s &#64; 24fps&#41;</string>
    <string name="lapse_capture_txt">Hold still to keep capturing timelapse photos</string>
    <string name="final_capture_txt">Move the phone to take another photo, or enable timelapse capture in the settings for multiple captures of the same subject.</string>
    <string name="permission_button">Set permissions</string>
    <string name="permission_txt_1">AutoShutter needs permission to access your device\'s camera and file
        storage in order to capture and save photos.</string>
    <string name="permission_txt_2">Please consider giving the app these permissions in order for it to work as intended.</string>

    <!-- Strings related to Settings -->
    <string name="pref_res_title">Photo resolution</string>
    <string name="pref_res_def">max</string>
    <string-array name="pref_res_titles">
        <item>1MP/720p</item>
        <item>2MP/1080p</item>
        <item>Maximum</item>
    </string-array>
    <string-array name="pref_res_values">
        <item>hd</item>
        <item>fhd</item>
        <item>max</item>
    </string-array>
    <string name="pref_shake_title">Camera shake tolerance</string>
    <string name="pref_shake_def">10</string>
    <string-array name="pref_shake_titles">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Off</item>
    </string-array>
    <string-array name="pref_shake_values">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>1000</item>
    </string-array>
    <string name="pref_init_title">Initial delay</string>
    <string name="pref_init_def">5000</string>
    <string-array name="pref_init_titles">
        <item>2s</item>
        <item>5s</item>
        <item>10s</item>
        <item>15s</item>
        <item>30s</item>
    </string-array>
    <string-array name="pref_init_values">
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
        <item>30000</item>
    </string-array>
    <string name="pref_timelapse_title">Timelapse mode</string>
    <string name="pref_timelapse_description">Keeps screen on and enables timelapse photography</string>
    <string name="pref_freq_title">Timelapse frame interval</string>
    <string name="pref_freq_def">1000</string>
    <string-array name="pref_freq_titles">
        <item>0.1s</item>
        <item>0.2s</item>
        <item>0.5s</item>
        <item>1s</item>
        <item>5s</item>
        <item>10s</item>
        <item>30s</item>
        <item>60s</item>
    </string-array>
    <string-array name="pref_freq_values">
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>5000</item>
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
    </string-array>
    <string name="pref_wb_title">White-balance mode</string>
    <string name="pref_wb_def">1</string>
    <string-array name="pref_wb_titles">
        <item>Auto</item>
        <item>Daylight</item>
        <item>Cloudy</item>
        <item>Shade</item>
        <item>Twilight</item>
        <item>Incandescent</item>
        <item>Fluorescent</item>
    </string-array>
    <string-array name="pref_wb_values">
        <item>1</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>7</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_exp_title">Exposure compensation</string>
    <string name="pref_exp_def">0</string>
    <string-array name="pref_exp_titles">
        <item>-2</item>
        <item>-1 &#8532;</item>
        <item>-1 &#8531;</item>
        <item>-1</item>
        <item>-&#8532;</item>
        <item>-&#8531;</item>
        <item>0</item>
        <item>+&#8531;</item>
        <item>+&#8532;</item>
        <item>+1</item>
        <item>+1 &#8531;</item>
        <item>+1 &#8532;</item>
        <item>+2</item>
    </string-array>
    <string-array name="pref_exp_values">
        <item>-6</item>
        <item>-5</item>
        <item>-4</item>
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="pref_privacy">Privacy Policy</string>
</resources>
